--- a/BusTicket/Move.toml
+++ b/BusTicket/Move.toml
@@ -6,4 +6,4 @@ version = "0.0.1"
 Sui = { git = "https://github.com/MystenLabs/sui.git", subdir = "crates/sui-framework/packages/sui-framework", rev = "framework/testnet" }
 
 [addresses]
-busticket = "0x0"
+BusTicket = "0x0"
