--- a/StakingContract/Move.toml
+++ b/StakingContract/Move.toml
@@ -1,9 +1,9 @@
 [package]
-name = "StakingContract"
+name = "stakingContract"
 version = "0.0.1"
 
 [dependencies]
 Sui = { git = "https://github.com/MystenLabs/sui.git", subdir = "crates/sui-framework/packages/sui-framework", rev = "framework/testnet" }
 
 [addresses]
-StakingContract = "0x0"
+stakingContract = "0x0"
